--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+.env*.local
+node_modules/
+.next/
+.env
+__pycache__/
+*.pyc
+.fastf1_cache/
+f1_venv/
 # Distribution / packaging
 .Python
 build/
