--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,36 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Test files
+test_*.py
+*_test.py
+test_*.js
+*_test.js
+
+# macOS
+.DS_Store
+
+# IDE files
+.vscode/
+.idea/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+
+# Package lock files (optional - you may want to keep these)
+# package-lock.json
+# yarn.lock
+
+# Python cache
+python/.fastf1_cache/
+
+# Logs
+*.log
+logs/
+
+# Database dumps
+*.sql.bak
+*.dump
