--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,10 +16,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "next": "^16.1.0",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
