--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "framer-motion": "^12.23.26",
     "next": "^16.1.0",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
